# stringless

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
ext/: api_macros.h
ext/dlib/: README.md
ext/dlib/dlib/: revision.h
nbproject/: configurations.xml  licenseheader.txt  project.properties  project.xml
nbproject/private/: configurations.xml  private.xml
src/: CMakeLists.txt  CMakeLists_boost.txt  FaceDetector.cc  FaceDetector.h  FrameData.cc  FrameData.h  MemoryManager.cc  MemoryManager.h  Mutex.cc  Mutex.h  OpenFacer.cc  OpenFacer.h  Reader.cc  Reader.h  Stringless.cc  Writer.cc  Writer.h  welcome.cc  welcome_c.cc
src/maya/: CMakeLists.txt  Reader.cc  Reader.h
src/mem_test/: CMakeLists.txt  welcome_c.cc
stringless-maya/: CMakeLists.txt  buildconfig  qtconfig  stringless.pro  stringless.qrc  stringless.ui  userconfig
stringless-maya/CMake/: FindMaya.cmake
stringless-maya/nbproject/: configurations.xml  project.properties  project.xml
stringless-maya/nbproject/private/: Debug.properties  configurations.xml  private.xml
stringless-maya/src/: CMakeLists.txt  Reader.cc  Reader.h  StringlessMaya.mel  StringlessMayaCmd.cc  StringlessMayaCmd.h  StringlessMayaDevice.cc  StringlessMayaDevice.h  StringlessMayaMain.cc  StringlessWindow.cc  StringlessWindow.h  stringless.cc  stringless.h
